--- a/newtod-android/AndroidManifest.xml
+++ b/newtod-android/AndroidManifest.xml
@@ -10,7 +10,7 @@
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:name="com.gemserk.games.newtod.AndroidApplication"
 			android:label="@string/app_name" android:configChanges="keyboard|keyboardHidden|orientation" 
-			android:screenOrientation="landscape">
+			android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
