changed stuff to use entities, added bodies and using box2ddebugrenderer to render stuff, same stuff different code

--- a/newtod-core/pom.xml
+++ b/newtod-core/pom.xml
@@ -49,6 +49,11 @@
 			<version>${commons.gdx.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.gemserk.commons.gdx</groupId>
+			<artifactId>commons-gdx-resources</artifactId>
+			<version>${commons.gdx.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.dmurph</groupId>
 			<artifactId>JGoogleAnalyticsTracker</artifactId>
 		</dependency>
